src/objects/Mogli_SMS__SMS__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in our custom process builder to track whether we have sent a notification for a given SMS record.</description>
        <label>Contact Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Log</label>
        <referenceTo>Event_Log__c</referenceTo>
        <relationshipLabel>SMS</relationshipLabel>
        <relationshipName>SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Batch_Group_ID__c</fullName>
        <description>If the SMS record is part of a batch transaction this number will contain the Batch Group Id that it belongs with</description>
        <externalId>true</externalId>
        <label>Batch Group ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>SMS</relationshipLabel>
        <relationshipName>SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SMS</relationshipLabel>
        <relationshipName>SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Debug__c</fullName>
        <label>Debug</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incoming</fullName>
                </value>
                <value>
                    <fullName>Outgoing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gateway</label>
        <referenceTo>Mogli_SMS__Gateway__c</referenceTo>
        <relationshipLabel>SMS</relationshipLabel>
        <relationshipName>SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>SMS</relationshipLabel>
        <relationshipName>SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Message__c</fullName>
        <label>Message</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Scheduled_Delivery__c</fullName>
        <label>Scheduled Delivery</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Sending</fullName>
                </value>
                <value>
                    <fullName>Sent Successfully</fullName>
                </value>
                <value>
                    <fullName>Received Successfully</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mogli_SMS__isBatchTransaction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will determine in the SMSTriggerHandler whether or not the set of recods that comes through are related to a batch Transaction.</description>
        <label>isBatchTransaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Sent_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that a notification was sent to on creation of this SMS record.</description>
        <label>Notification Sent To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Id__c</fullName>
        <externalId>true</externalId>
        <label>Previous_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SMS</label>
    <listViews>
        <fullName>Mogli_SMS__All</fullName>
        <columns>NAME</columns>
        <columns>Mogli_SMS__Lead__c</columns>
        <columns>Mogli_SMS__Contact__c</columns>
        <columns>Mogli_SMS__Message__c</columns>
        <columns>Mogli_SMS__Phone_Number__c</columns>
        <columns>Mogli_SMS__Direction__c</columns>
        <columns>Mogli_SMS__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Mogli_SMS__Attachments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mogli_SMS__Incoming</fullName>
        <columns>NAME</columns>
        <columns>Mogli_SMS__Contact__c</columns>
        <columns>Mogli_SMS__Lead__c</columns>
        <columns>Mogli_SMS__Message__c</columns>
        <columns>Mogli_SMS__Phone_Number__c</columns>
        <columns>Mogli_SMS__Status__c</columns>
        <columns>Mogli_SMS__Attachments__c</columns>
        <columns>Mogli_SMS__Campaign__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mogli_SMS__Direction__c</field>
            <operation>equals</operation>
            <value>Incoming</value>
        </filters>
        <label>Incoming</label>
    </listViews>
    <listViews>
        <fullName>Mogli_SMS__Outgoing</fullName>
        <columns>NAME</columns>
        <columns>Mogli_SMS__Contact__c</columns>
        <columns>Mogli_SMS__Lead__c</columns>
        <columns>Mogli_SMS__Message__c</columns>
        <columns>Mogli_SMS__Phone_Number__c</columns>
        <columns>Mogli_SMS__Status__c</columns>
        <columns>Mogli_SMS__Campaign__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mogli_SMS__Direction__c</field>
            <operation>equals</operation>
            <value>Outgoing</value>
        </filters>
        <label>Outgoing</label>
    </listViews>
    <listViews>
        <fullName>Mogli_SMS__Scheduled</fullName>
        <columns>NAME</columns>
        <columns>Mogli_SMS__Contact__c</columns>
        <columns>Mogli_SMS__Lead__c</columns>
        <columns>Mogli_SMS__Message__c</columns>
        <columns>Mogli_SMS__Phone_Number__c</columns>
        <columns>Mogli_SMS__Scheduled_Delivery__c</columns>
        <columns>Mogli_SMS__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Scheduled</label>
    </listViews>
    <nameField>
        <displayFormat>SMS{YY}{MM}{DD}-{0000}</displayFormat>
        <label>SMS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>